[gd_scene load_steps=15 format=3 uid="uid://bxfyr5l5ydx66"]

[ext_resource type="Texture2D" uid="uid://baq4ge7sy085w" path="res://Assets/BulletMancer.png" id="1_j2yil"]
[ext_resource type="Script" path="res://Enemies/Scenes/enemy_boss.gd" id="1_pkodp"]
[ext_resource type="Texture2D" uid="uid://c1f07xf4dr8af" path="res://Assets/bulletGnome.png" id="2_l7kb3"]
[ext_resource type="PackedScene" uid="uid://cpu2psp3r768g" path="res://Scenes/health_component.tscn" id="3_23nk1"]
[ext_resource type="Texture2D" uid="uid://d0e48hvkb4dlg" path="res://Assets/mageBullet.png" id="3_vhhlu"]
[ext_resource type="Texture2D" uid="uid://dg3vfqc6cijo3" path="res://Assets/healthbackground.png" id="6_ocv4o"]
[ext_resource type="Texture2D" uid="uid://ciqu1dswp05tu" path="res://Assets/healthunder.png" id="8_krywc"]
[ext_resource type="AudioStream" uid="uid://dgi3qcr486fce" path="res://Assets/Sounds/hitHurt.wav" id="8_qosjt"]
[ext_resource type="Texture2D" uid="uid://cyxm2ixdlywdv" path="res://Assets/portal.png" id="9_mgjnf"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2p44k"]
height = 34.0

[sub_resource type="Animation" id="Animation_c0jem"]
resource_name = "bossDeath"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.6, 1.2, 1.5, 2, 2.5, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.666667, 0), Vector2(-11.138, 1.905), Vector2(10, 10), Vector2(5, -10), Vector2(-10, -10), Vector2(2, 10), Vector2(0.666667, 0), Vector2(0.666667, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 1.6, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 2.61799, 17.4533, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_q5ycr"]
resource_name = "bossHurt"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.4, 1.4), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.523599, 0.0]
}

[sub_resource type="Animation" id="Animation_0ln55"]
resource_name = "bossSpawn"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Portal:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Portal:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 12.5664]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Portal:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2, 2.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1), Vector2(1, 0.7)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 2.5, 3.6, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(1, 1, 1, 0.0588235), Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 2.5, 5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.5, 0.5), Vector2(1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite2D:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 2.5, 5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0), Vector2(0, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Sprite2D:z_index")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("HealthBar:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 4.5, 5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Portal:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 2.5, 4, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Portal:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 2.5, 5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 40), Vector2(0, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mnpo1"]
_data = {
"bossDeath": SubResource("Animation_c0jem"),
"bossHurt": SubResource("Animation_q5ycr"),
"bossSpawn": SubResource("Animation_0ln55")
}

[node name="EnemyBoss" type="CharacterBody2D"]
scale = Vector2(3, 3)
collision_layer = 4
collision_mask = 0
script = ExtResource("1_pkodp")
bossHealth = 450
bulletSprites = Array[Texture2D]([ExtResource("2_l7kb3"), ExtResource("3_vhhlu")])
tentacleRotationAmount = 100.0
tentacleShotCount = 5
tentacleSpinSpeed = 10.0
tentacleBulletSpeed = 100.0
snipeSpeed = 500.0
batsPerCloak = 10
bulletPukeSpeed = 300.0
snipesBeforeReset = 15.0
snipeResetTimeSec = 2.0

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 0)
texture = ExtResource("1_j2yil")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_2p44k")

[node name="HealthComponent" parent="." instance=ExtResource("3_23nk1")]

[node name="HealthBar" type="TextureProgressBar" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = -60.0
offset_top = 22.3333
offset_right = 164.0
offset_bottom = 246.333
scale = Vector2(1, 0.3)
value = 50.0
texture_under = ExtResource("6_ocv4o")
texture_progress = ExtResource("8_krywc")
tint_under = Color(0.266667, 0, 0.137255, 0.529412)
tint_progress = Color(0, 0.341176, 0.266667, 0.643137)
radial_initial_angle = 19.5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_mnpo1")
}
autoplay = "bossSpawn"

[node name="TentacleTimer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="PhaseSwitcher" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="ShootAtPlayer" type="Timer" parent="."]
autostart = true

[node name="ShootCloak" type="Timer" parent="."]
wait_time = 0.025
autostart = true

[node name="SnipeReset" type="Timer" parent="."]
one_shot = true

[node name="ShootLaser" type="Timer" parent="."]
autostart = true

[node name="ShootLaserWall" type="Timer" parent="."]
wait_time = 0.35
autostart = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_qosjt")
volume_db = -20.0
pitch_scale = 0.52

[node name="Portal" type="Sprite2D" parent="."]
position = Vector2(0, 40)
scale = Vector2(1e-05, 1e-05)
texture = ExtResource("9_mgjnf")

[node name="NormalLaserToggler" type="Timer" parent="."]
wait_time = 8.0
autostart = true

[node name="laserwallAim" type="Node2D" parent="."]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="TentacleTimer" to="." method="_on_tentacle_timer_timeout"]
[connection signal="timeout" from="TentacleTimer" to="." method="_on_rotate_shoot_timeout"]
[connection signal="timeout" from="PhaseSwitcher" to="." method="_on_phase_switcher_timeout"]
[connection signal="timeout" from="ShootAtPlayer" to="." method="_on_shoot_at_player_timeout"]
[connection signal="timeout" from="ShootCloak" to="." method="_on_shoot_cloak_timeout"]
[connection signal="timeout" from="SnipeReset" to="." method="_on_snipe_reset_timeout"]
[connection signal="timeout" from="ShootLaser" to="." method="_on_shoot_laser_timeout"]
[connection signal="timeout" from="ShootLaserWall" to="." method="_on_shoot_laser_wall_timeout"]
[connection signal="timeout" from="NormalLaserToggler" to="." method="_on_normal_laser_toggler_timeout"]
